Fix hover on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ nav:not(.show) {
 }
 
 .menu-icon {
-  @apply p-3 rounded-lg border border-zinc-700 text-zinc-200 transition-colors cursor-pointer hover:bg-zinc-800;
+  @apply p-3 rounded-lg border border-zinc-700 text-zinc-200 transition-colors cursor-pointer md:hover:bg-zinc-800;
 }
 
 /* Navlink Styles */
@@ -60,11 +60,11 @@ nav:not(.show) {
 }
 
 .btn-primary {
-  @apply bg-zinc-700 hover:bg-zinc-800;
+  @apply bg-zinc-700 md:hover:bg-zinc-800;
 }
 
 .btn-outline {
-  @apply border border-zinc-600 hover:bg-zinc-800;
+  @apply border border-zinc-600 md:hover:bg-zinc-800;
 }
 
 .btn-icon {
